--- a/peopleFinder/templates/peopleFinder/base.html
+++ b/peopleFinder/templates/peopleFinder/base.html
@@ -4,6 +4,9 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="{% static 'peopleFinder/style.css' %}"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.0/es6-promise.auto.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="{% static 'peopleFinder/modal.js' %}"></script>
     </head>
     <body>
         <div id="header">
